# Mihits-Melody-Matrix

./: .clang-format  .editorconfig  .gitattributes  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  build.bat  build_3p.txt  build_anim.txt  build_complete.bat  build_coord.txt  build_d.txt  build_err.txt  build_err2.txt  build_err3.txt  build_err4.txt  build_err5.txt  build_errors.txt  build_h.txt  build_h2.txt  build_log.txt  build_log3.txt  build_now.bat  build_output.txt  build_output2.txt  build_s.txt  build_simple.bat  build_vs.bat  config.ini  gen_assets.py  includes_log.txt  msbuild_output.txt  msbuild_output2.txt  msbuild_output3.txt  msbuild_output4.txt
assets/beatmaps/: .gitkeep
assets/beatmaps/-ERROR 2018ver/: -Sylvari's Extra.mma  Aeril's Hard.mma  Breathe.mma  Nao's Insane.mma  frogy's Expert.mma
assets/beatmaps/Bakudanma/: Clubber's Hard.mma  Farewell, my Youth.mma  FuJu's Expert.mma  newton's Insane.mma
assets/beatmaps/Dakara Boku wa Ongaku o Yameta/: Bouquet.mma  Jazz's Another.mma  Namki's Expert.mma  Saggin's Hard.mma  Seolv's Insane.mma  Shii's Hard.mma  Shizurre's Expert.mma  Wanpatha's Normal.mma
assets/beatmaps/Deep Indigo/: Asami's Extreme.mma  Delis & Mirash Collab Extra.mma  GlazeE & aika Collab Extra.mma  Sandrew's Hard.mma  That's Why I Gave up on Mapping.mma  aika & kanor Collab Insane.mma
assets/beatmaps/Hachigatsu, Bou, Tsukiakari/: Collab Extra.mma  Extra.mma  GlazeE's Hard.mma  Insane.mma  Normal.mma
cmake/: Dependencies.cmake  glad_placeholder.c.in  glad_placeholder.h.in
docs/: Malody-Martix.md  PROJECT_GUIDE.md  fixed_cell_grid_design.md  implementation_plan.md  project_analysis.md  tech-interview-guide.md  unplanned_points.md  游戏大厅项目笔记.md  音画判定延迟审查.md  音频时钟-cursor台阶优化.md
scripts/: download_deps.py  gen_h1.py  gen_h2.py  gen_header.py  gen_header_full.py  patch_mask.py  write_header.py
src/: main.cpp  version.h.in
src/audio/: audio_engine.cpp  audio_engine.h  miniaudio_cursor_playhead.cpp  miniaudio_cursor_playhead.h  wasapi_playhead.h  wasapi_playhead_stub.cpp  wasapi_playhead_win.cpp
src/beatmap/: beatmap.h  beatmap_builder.cpp  beatmap_builder.h  beatmap_parser.h  mma_parser.cpp  mma_parser.h  mma_serializer.cpp  mma_serializer.h  note.h  note_factory.cpp  note_factory.h  note_pool.cpp  note_pool.h  osu_parser.cpp  osu_parser.h  scroll_simulation.h
src/core/: asset_loader.cpp  asset_loader.h  clock.cpp  clock.h  game_state.h  game_state_base.h  kernel.cpp  kernel.h  scene_transition.cpp  scene_transition.h  state_manager.cpp  state_manager.h
src/gameplay/: combo_manager.cpp  combo_manager.h  formation_controller.cpp  formation_controller.h  hp_manager.cpp  hp_manager.h  judge_queue.cpp  judge_queue.h  judge_strategy.h  score_manager.cpp  score_manager.h
src/input/: gameplay_input.h  gameplay_input_factory.cpp  input_manager.cpp  input_manager.h  raw_input_stub.cpp  raw_input_win.cpp  sdl_poll_input.cpp
src/platform/: config.cpp  config.h  file_dialog.cpp  file_dialog.h  file_system.cpp  file_system.h  zip_extract.cpp  zip_extract.h
src/renderer/: border_renderer.cpp  border_renderer.h  effect_renderer.cpp  effect_renderer.h  grid_layout.h  hud_renderer.cpp  hud_renderer.h  note_renderer.cpp  note_renderer.h  renderer.cpp  renderer.h  renderer.h.new  renderer_new.h  shader.cpp  shader.h  stb_image_impl.cpp  texture.cpp  texture.h  texture_cache.cpp  texture_cache.h
src/time/: audio_playhead.h  host_clock.h  host_clock_stub.cpp  host_clock_win.cpp
src/ui/: frame_stats_overlay.cpp  frame_stats_overlay.h  theme.cpp  theme.h  ui_manager.cpp  ui_manager.h
src/util/: error_codes.h  event_manager.h  exceptions.h  hash.cpp  hash.h  logger.cpp  logger.h  result.h
tests/: CMakeLists.txt  test_gameplay.cpp  test_main.cpp
to_do/: MMA_FORMAT_V2.md  osz_to_mma.cpp
tools/: generate_holdpush.py  generate_overlay.py  resize_note_textures.py  verify_gameplay_input.cpp
(+57 files in other folders)
